--- a/BodaNyS/index.html
+++ b/BodaNyS/index.html
@@ -43,7 +43,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="30% 50%">
-									<img src="./images/principal.jpg" alt="" />
+									<img src="./images/principal.JPG" alt="" />
 								</div>
 							</section>
 
