--- a/BodaNyS/index.html
+++ b/BodaNyS/index.html
@@ -26,7 +26,7 @@
 
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
-								<div class="content color0 span-6-75">
+								<div class="content color0 span-3-75">
 									<h9 class="align-left allura-regular">Noemí Hernández</h9>
 									<h9 class="align-center allura-regular">&</h9>
 									<h9 class="align-right allura-regular">Saúl Ponce</h9>
@@ -43,18 +43,18 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="30% 50%">
-									<img src="./images/principal.JPG" alt="" />
+									<img src="images/principal.JPG" alt="" />
 								</div>
 							</section>
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
-								<div class="content">
+								<div class="content span-7">
 									<h1 class="allura-regular-wb" style="text-align: center; width: 100%; position: relative; top: -65px;">ECLESIASTÉS 4:9-10</h1>
 									<p class="allura-regular-wb align-center" style="font-size: 28px;">Más valen dos que uno, porque obtienen más fruto de su esfuerzo, si caen el uno levanta al otro.
 									</p>
 								</div>
-								<div class="image span-1-75 color0" data-position="top center">
+								<div class="image " data-position="top center">
 									<img src="images/pensamiento.JPG" alt="" />
 								</div>
 							
@@ -75,7 +75,7 @@
 
 						<!-- Panel -->
 							<section class="panel">
-								<div class="intro color0 span-6-75">
+								<div class="intro color0 span-4-5">
 									<h1 class="allura-regular align-center" style="text-align: center; width: 100%;" >Para Nuestras Familias y Amigos</h1>
 								<p class="allura-regular align-center" style="font-size: 28px;text-align: center; width: 100%; ">El camino es más divertido si lo recorremos juntos. Gracias por tanto</p>
 								<br>
