--- a/BodaNyS/index.html
+++ b/BodaNyS/index.html
@@ -42,14 +42,14 @@
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-1-75" data-position="30% 50%">
-									<img src="images/principal.JPG" alt="" />
+								<div class="image filtered span-1-75" data-position="25% 25%">
+									<img src="images/principal.jpg" alt="" />
 								</div>
 							</section>
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
-								<div class="content span-7">
+								<div class="content span-4-5">
 									<h1 class="allura-regular-wb" style="text-align: center; width: 100%; position: relative; top: -65px;">ECLESIASTÉS 4:9-10</h1>
 									<p class="allura-regular-wb align-center" style="font-size: 28px;">Más valen dos que uno, porque obtienen más fruto de su esfuerzo, si caen el uno levanta al otro.
 									</p>
@@ -67,7 +67,7 @@
 									<p class="allura-regular-gold align-center" style="font-size: 28px;">Nos llena de alegría compartir este momento contigo, acompañanos a nuestra Boda</p>
 								</div>
 								<div class="align-center">
-									<img src="images/sobre.png" alt="Descripción de la imagen">
+									<img src="images/sobre.png" alt="Descripción de la imagen" width="450" height="450">
 								</div>
 							</section>
 
@@ -75,7 +75,7 @@
 
 						<!-- Panel -->
 							<section class="panel">
-								<div class="intro color0 span-3-75">
+								<div class="intro color0 span-3-5">
 									<h1 class="allura-regular align-center" style="text-align: center; width: 100%;" >Para Nuestras Familias y Amigos</h1>
 								<p class="allura-regular align-center" style="font-size: 28px;text-align: center; width: 100%; ">El camino es más divertido si lo recorremos juntos. Gracias por tanto</p>
 								<br>
