--- a/NyS/index.html
+++ b/NyS/index.html
@@ -48,7 +48,7 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
-								<div class="content span-4-5">
+								<div class="content span-7">
 									<h1 class="allura-regular-brown" style="text-align: center; width: 100%; position: relative; top: -5px;">ECLESIASTÉS 4:9-10</h1>
 									<p class="allura-regular-brown align-center" style="font-size: 28px;">Más valen dos que uno, porque obtienen más fruto de su esfuerzo, si caen el uno levanta al otro.</p>
 								</div>
