--- a/NyS/index.html
+++ b/NyS/index.html
@@ -60,8 +60,8 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h1 class="align-center allura-regular-wb">Estás Invitado</h1>
-									<p class="allura-regular-wb align-center" style="font-size: 28px;">Nos llena de alegría compartir este momento contigo, acompañanos a nuestra Boda</p>
+									<h1 class="align-center allura-regular-gold">Estás Invitado</h1>
+									<p class="allura-regular-gold align-center" style="font-size: 28px;">Nos llena de alegría compartir este momento contigo, acompañanos a nuestra Boda</p>
 								</div>
 								<div class="align-center">
 									<img src="images/sobre.png" alt="Descripción de la imagen" width="400" height="400" >
