--- a/NyS/index.html
+++ b/NyS/index.html
@@ -390,8 +390,8 @@
 							<!--Panel-->
 							<section class="panel color0">
 								<div class="intro color0 span-3-75">
-									<h1 class="major allura-regular-black align-center">Vestimenta: Formal</h1>
-									<p class="allura-regular-black" style="font-size: 28px;text-align: center; width: 100%;">El blanco es un color especial en este día, <strong>reservado para la novia</strong> como símbolo de esta ocasión única. Agradecemos su comprensión y estamos emocionados de celebrar juntos.</p>
+									<h1 class="major allura-regular-gold align-center">Vestimenta: Formal</h1>
+									<p class="allura-regular-gold" style="font-size: 28px;text-align: center; width: 100%;">El blanco es un color especial en este día, <strong>reservado para la novia</strong> como símbolo de esta ocasión única. Agradecemos su comprensión y estamos emocionados de celebrar juntos.</p>
 								</div>
 								
 							</section>
