--- a/NyS/index.html
+++ b/NyS/index.html
@@ -92,8 +92,8 @@
 									</div>
 									
 									<div class="group span-3">
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/06.jpeg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/07.jpeg" alt="" /></a>
+										<a href="images/gallery/fulls/06.jpg" class="image span-3" data-position="center"><img src="images/gallery/thumbs/06.jpeg" alt="" /></a>
+										<a href="images/gallery/fulls/07.jpg" class="image span-3" data-position="center"><img src="images/gallery/thumbs/07.jpeg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpeg" alt="" /></a>
 								</div>
