--- a/NyS/index.html
+++ b/NyS/index.html
@@ -27,13 +27,13 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="align-left allura-regular">Noemí Hernández</h1>
+									<h1 class="align-left allura-regular">Noemí Hernández Muciños</h1>
 									<h1 class="align-center allura-regular">&</h1>
-									<h1 class="align-right allura-regular">Saúl Ponce</h1>
+									<h1 class="align-right allura-regular">Saúl Ponce Hernández</h1>
 									<h2 class="align-center allura-regular">03 Mayo</h2>
 									<h2 class="allura-regular" style="display: flex; justify-content: space-between;">
 										<span class="align-left">Sábado</span>
-										<span class="align-right">3:00 PM</span>
+										<span class="align-right">1:00 PM</span>
 									</h2>
 									<h1 class="align-center allura-regular">Faltan</h1>
 									<div class="align-center" id="contador"></div>
@@ -78,12 +78,12 @@
 									<h1 class="allura-regular align-center" style="text-align: center; width: 100%;" >Para Nuestras Familias y Amigos</h1>
 									<p class="allura-regular align-center" style="font-size: 28px;text-align: center; width: 100%; ">El camino es más divertido si lo recorremos juntos. Gracias por tanto</p>
 									<p class="align-center allura-regular" style="font-size: 50px; text-align: center; width: 100%;">Nuestros Padres</p>
-									<p class="align-center allura-regular" style="font-size: 50px; text-align: center; width: 100%; display: inline-flex; align-items: center; justify-content: center;">
+									<p class="align-center allura-regular" style="font-size: 20px; text-align: center; width: 100%; display: inline-flex; align-items: center; justify-content: center;">
 										<img src="images/ramo.png" alt="Novia" width="120" height="120" style="margin-right: 10px;">
 										Cristina Mociños Jiménez<br>
 										Margarito Hernández Jiménez
 									</p>
-									<p class="align-center allura-regular" style="font-size: 50px; text-align: center; width: 100%; display: inline-flex; align-items: center; justify-content: center;">
+									<p class="align-center allura-regular" style="font-size: 20px; text-align: center; width: 100%; display: inline-flex; align-items: center; justify-content: center;">
 										Lidia Hernández García<br>
 										Juan Guillermo Ponce Barrera
 										<img src="images/smoking.png" alt="Novio" width="140" height="140" style="margin-right: 10px;">
@@ -157,7 +157,7 @@
 								<div class="inner columns aligned">
 									<div class="span-3-75">
 										<h1 class="allura-regular-gold align-center" style="position: relative; top: -45px;">El Gran día</h1>
-										<blockquote class="allura-regular-gold align-center" style="font-size: 28px;text-align: center; width: 100%;position: relative; top: -40px;">Sábado 3 de Mayo 3pm.	
+										<blockquote class="allura-regular-gold align-center" style="font-size: 28px;text-align: center; width: 100%;position: relative; top: -40px;">Sábado 3 de Mayo 1pm.	
 										</blockquote>
 										<h1 class="allura-regular-gold align-center" style="position: relative; top: -35px;">Finca Los Potrillos</h1>
 										<pre><code>
@@ -407,8 +407,7 @@
 									<a href="https://wa.link/2crwol" style="display: block; text-align: center; width: 100%;">
 										<img src="images/whatsapp.png" alt="Toca aquí" width="250" height="250" >
 									</a>
-									<h1 class="major allura-regular-gold align-center">Confirma tu Cita</h1>
-									<p class="allura-regular-gold" style="font-size: 28px;text-align: center; width: 100%;">720-642-3774</p>
+									<h1 class="major allura-regular-gold align-center">¡Toca la imagen para Confirmar tu Asistencia!</h1>
 								</div>
 								
 							</section>
