--- a/NyS/index.html
+++ b/NyS/index.html
@@ -149,7 +149,7 @@
 								<div class="intro color0 span-3-75">
 									<h1 class="major allura-regular-rosa align-center">Gracias!!</h1>
 									<span style="display: block; text-align: center; width: 100%;">
-										<img src="images/copas.png" alt="Gracias">
+										<img src="images/copas.png" alt="Gracias" width="250" height="250">
 									</span>
 									
 									<p class="allura-regular-rosa" style="font-size: 28px;text-align: center; width: 100%;">Agradecemos a las Familias, Amigos y a los Padrinos por el AMOR y APOYO</p>
