--- a/NyS/index.html
+++ b/NyS/index.html
@@ -27,7 +27,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="align-left allura-regular">Noemí Hernández Muciños</h1>
+									<h1 class="align-left allura-regular">Noemí Hernández Mociños</h1>
 									<h1 class="align-center allura-regular">&</h1>
 									<h1 class="align-right allura-regular">Saúl Ponce Hernández</h1>
 									<h2 class="align-center allura-regular">03 Mayo</h2>
