--- a/NyS/index.html
+++ b/NyS/index.html
@@ -49,8 +49,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-4-5">
-									<h1 class="allura-regular-brown" style="text-align: center; width: 100%; position: relative; top: -5px;">ECLESIASTÉS 4:9-10</h1>
-									<p class="allura-regular-brown align-center" style="font-size: 28px;">Más valen dos que uno, porque obtienen más fruto de su esfuerzo, si caen el uno levanta al otro.</p>
+									<h1 class="allura-regular-gold" style="text-align: center; width: 100%; position: relative; top: -5px;">ECLESIASTÉS 4:9-10</h1>
+									<p class="allura-regular-gold align-center" style="font-size: 28px;">Más valen dos que uno, porque obtienen más fruto de su esfuerzo, si caen el uno levanta al otro.</p>
 								</div>
 								<div class="image" data-position="top center">
 									<img src="images/pensamiento.JPG" alt="" />
@@ -147,12 +147,12 @@
 						<!-- Panel -->
 							<section class="panel color0">
 								<div class="intro color0 span-3-75">
-									<h1 class="major allura-regular-rosa align-center">Gracias!!</h1>
+									<h1 class="major allura-regular-gold align-center">Gracias!!</h1>
 									<span style="display: block; text-align: center; width: 100%;">
 										<img src="images/copas.png" alt="Gracias" width="250" height="250">
 									</span>
 									
-									<p class="allura-regular-rosa" style="font-size: 28px;text-align: center; width: 100%;">Agradecemos a las Familias, Amigos y a los Padrinos por el AMOR y APOYO</p>
+									<p class="allura-regular-gold" style="font-size: 28px;text-align: center; width: 100%;">Agradecemos a las Familias, Amigos y a los Padrinos por el AMOR y APOYO</p>
 								</div>
 								<div class="inner columns aligned">
 									<div class="span-3-75">
